[package]
name = "utils"
version.workspace = true
edition = "2024"
description = "Utility functions for the Memory-Knowledge system"

[dependencies]
mk_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex = "0.4"
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
regex.workspace = true

[lints]
workspace = true
