[package]
name = "memory-service"
version = "0.1.0"
edition = "2024"
description = "Memory service - handles memory storage and retrieval"

[[bin]]
name = "memory-service"
path = "main.rs"

[dependencies]
mk_core.workspace = true
memory.workspace = true
storage.workspace = true
config.workspace = true
errors.workspace = true
utils.workspace = true

tokio.workspace = true
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono = "0.4"

# Metrics and observability
metrics.workspace = true
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
testing.workspace = true
